# rustpg

./: Cargo.toml  README.md
assets/: enemy_10.aseprite  enemy_10.sprite.json  enemy_3.aseprite  enemy_3.sprite.json  npc_4.sprite.json
src/: fps.rs  main.rs
src/audio/: components.rs  systems.rs
src/base/: components.rs  resources.rs
src/camera/: components.rs  systems.rs
src/damagable/: components.rs
src/enemy/: components.rs  resources.rs  systems.rs
src/game/: components.rs  level.rs  mod.rs  systems.rs
src/gamestate/: components.rs  systems.rs
src/health/: components.rs
src/hurt/: components.rs  resources.rs  systems.rs
src/particle/: components.rs  systems.rs
src/player/: components.rs  systems.rs
src/powerups/: components.rs  mod.rs  systems.rs
src/ui/: components.rs  main_menu.rs  mod.rs  systems.rs  upgrade_menu.rs
src/upgrade/: components.rs  mod.rs  systems.rs
src/window/: systems.rs
src/xp/: components.rs  systems.rs
