[package]
name = "rustpg"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.12.1", features = ["dynamic_linking"] }
bevy_rapier2d = { version = "0.24.0", features = ["debug-render-2d"] }
rand = "0.8.5"
bevy_asepritesheet = "0.5.2"
bevy_kira_audio = { version = "0.18", features = ["mp3", "wav"] }

bevy_asset_loader = { version = "0.19.1", features = [
  "2d",
  "3d",
  "standard_dynamic_assets",
] }
